--- a/site.html
+++ b/site.html
@@ -26,32 +26,36 @@
             }
             h3{
                 text-align: center;
-                color: rgb(239, 48, 80);
+                color: rgb(82, 82, 82);
                 font-size: 60px;
             }
             h4{
                 text-align: center;
-                color: rgb(239, 48, 80);
+                color: black;
                 font-size: 25px;
             }
             h5{
-                color:rgb(239, 48, 80);
+                color:black;
                 font-size: 18px;
             }
             h6{
                 font-size: 19px;
+                color: black;
+            }
+            body{
+                background-color: rgb(184, 176, 166);
             }
             
         </style>
-                <h2> Civic g10(preto):</h2>
+                <h2> Civic g10(Branco):</h2>
                 <center>
-                    <img src="civicão.jpg" width="420" height="360" alt="Texto Alternativo" title="civicão" 
+                    <img src="civic branquinho.jpg" width="450" height="380" alt="Texto Alternativo" title="civicão" 
                 </center>
                 <ul>
                     <li>ano-2020-2021</li>
-                    <li>km-27.986</li>
-                    <li>gasolina e álcool</li>
-                    <li>Preço-R$ 135.900</li>
+                    <li>km-96.000</li>
+                    <li>gasolina</li>
+                    <li>Preço-R$ R$ 106.790</li>
                     <li>Motor 1.5l Turbo com injeção direta</li>
                     <li>173 cv de potência</li>
                 </ul>  
@@ -59,25 +63,51 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/FwvVkRcQ-EY?si=jU0jzpRGpMkq60l7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <br>
                    <br>
-                    <h6><a href="https://www.webmotors.com.br/comprar/honda/civic/20-16v-flexone-exl-4p-cvt/4-portas/2020-2021/51365850?pos=e51365850g:&np=1">Compre Conosco</a></h6>
-                    <h3>Porsche</h3>
-                    <h4>Porsche 911(rosa):</h4>
+                    <h6><a href="https://www.webmotors.com.br/comprar/honda/civic/20-16v-flexone-ex-4p-cvt/4-portas/2017/50032517?pos=c50032517g:&np=1">Compre Conosco</a></h6>
+                   <br>
+                   <br>
+                   <h2>Civic Trype r(branco):</h2>
+                   <center>
+                    <img src="trype r.jpg"width="450" height="380" alt="Texto Alternativo" title="civicão trype r" 
+                   </center>
+                   <ul>
+                    <li>ano-2023</li>
+                    <li>km-1.700</li>
+                    <li>gasolina</li>
+                    <li>Preço-R$ 419.000</li>
+                    <li>2.0 16V turbo</li>
+                    <li>297 cv de potência</li>
+                   </ul>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ThMXH5MrlZI?si=lntLRNUzuddPpKvt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/HHOK1HZ5D1Y?si=gEm-r5Ky70FphsZ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <br>
+                   <br>
+                   <h6><a href="https://www.webmotors.com.br/comprar/honda/civic/20-di-vtec-turbo-gasolina-type-r-manual/4-portas/2023/50976297?pos=b50976297a:&np=1">Compre Conosco</a></h6>
+                   
+                   <h3>Porsche</h3>
+                    <h4>Porsche 911(cinza):</h4>
                     <center>
-                        <img src="porsche-911.jpg" width="450" height="360" alt="Texto Alternativo" title="porsche-911" 
+                        <img src="911.jpg" width="450" height="380" alt="Texto Alternativo" title="porsche lindona" 
                     </center>
                     <ul>
                         <h5><li>ano-2023-2024</li>
-                        <li>km-0</li>
-                        <li>gasolina</li>
-                        <li>Preço-R$ 1.199.000</li>
-                        <li>Conversível</li>
-                        <li>385 cv de potência</li>
-                    </h5>
+                             <li>km-0</li>
+                             <li>gasolina</li>
+                            <li>Preço-R$ 1.299.000</li>
+                            <li>Conversível</li>
+                            <li>385 cv de potência</li>
+                        </h5>
                     </ul>
                   "<iframe width="560" height="315" src="https://www.youtube.com/embed/GXwaQIZJkp8?si=kWTtsF-kxnuLicDJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/_XqUpE06pyc?si=TTGBzzMIL0wDfAlq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
                     <br>
                     <br>
-               <h6> <a href="https://www.webmotors.com.br/comprar/porsche/911/30-24v-h6-gasolina-carrera-s-cabriolet-pdk/2-portas/2023-2024/50764726?pos=p50764726g:&np=2">Compre Conosco</a></h6>
+               <h6> <a href="https://www.webmotors.com.br/comprar/porsche/911/30-24v-h6-gasolina-carrera-s-cabriolet-pdk/2-portas/2023-2024/51355338?pos=m51355338m:&np=1">Compre Conosco</a></h6
+                    <center>
+                    <a href="pagina01.html"><button>CLIQUE PARA VER MERCEDES</button></a>
+                    <br>
+                    <a href="pagina02.html"><button>CLIQUE PARA VER BMW</button></a>
+                    <br>
+                    <a href="pagina03.html"><button>CLIQUE PARA VER LAND ROVER</button></a>
         </body>
     </html>
